# flask-practice

./: .gitignore  .vimspector.json  README.md  app.py  config.py  pyproject.toml  wsgi.py
app/: __init__.py  routes.py
app/models/: user.py
migrations/versions/: ff9f65501c77_.py
